# pp

./: .gitignore  API.rst  APPS.rst  AUTHORS.rst  HISTORY.rst  LICENSE  README.rst  db.json  micc.json  pyproject.toml
assignment-2021/: LJ-equations.pptx  assignment-2021.pptx
course-material/: accounts.pptx  assignment-2021.pptx  getting-started.pptx  personal-setup.pptx
course-material/micc-documentation/: .buildinfo  api.html  apps.html  authors.html  devenv.html  faq.html  genindex.html  history.html  index.html  installation.html  links.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  tutorials.html  usage.html
course-material/micc-documentation/_modules/: index.html
course-material/micc-documentation/_modules/et_micc/: expand.html  logger.html  project.html  static_vars.html  tomlfile.html  utils.html
docs/: Makefile  conf.py  index.rst  installation.rst
pp/: __init__.py  cli_pp.py
tests/: __init__.py  test_cli_pp.py  test_pp.py
