[tool.poetry]
name = "pp"
version = "0.0.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Engelbert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/etijskens/pp"
homepage = "https://github.com/etijskens/pp"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"

[tool.poetry.scripts]
pp = "pp:cli_pp.main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
